2009-02-03  higepon  <higepon@users.sourceforge.jp>

        * FileBinaryInputPort.cpp (bufRead1) : Added for specialized case.

        * lib/srfi/%3A14.ss : Added srfi 13 and 14 ported from Ypsilon Scheme. (Thanks to y.fujita)

2009-02-02  higepon  <higepon@users.sourceforge.jp>

        * lib/mosh/control.ss : Added begin0 and let1. 

        * lib/mosh/ffi.ss (find-shared-libray): Added.

        * lib/mosh/control.ss : Added (mosh control) and aif.

        * FFI.cpp : Added double support for x86-64.

2009-02-01  higepon  <higepon@users.sourceforge.jp>

        * configure.ac: Added --enable-developer flag default No.
                        Mosh Developer *should* enable this.

        * Makefile.am (install-data-hook): Now we pre-compile R6RS libraries on installation.

        * mosh_config: Added.

        * lib/mosh/config.ss.in (mosh): Added (mosh config) library and document.

2009-01-31  higepon  <higepon@users.sourceforge.jp>

        * Allow fixnum argument to double argument (thanks to id:mjt.)

        * lib/mosh/ffi.ss : Added double/flonum support to FFI system.(IA32).

        * RecordProcedures.cpp (scheme::makeRecordTypeDescriptorEx): Fixed the sealed bug. Thanks to leque(Issue 44).

2009-01-30  higepon  <higepon@users.sourceforge.jp>

        * tools/psyntax-r6rs/rev10_to_10/psyntax/main.ss : Fixed the bug of (raise 1). Thanks to leque(Issue 42).

        * scripts/gen-doc-from-r6rs.scm : R6RS document.

2009-01-30  kokosabu  <kokosabu@gmail.com>

        * PortProcedures.cpp: Added port-transcoder.

2009-01-30  higepon  <higepon@users.sourceforge.jp>

        * scripts/gen-doc-from-r6rs.scm : Added for generating document for R6RS.

2009-01-29  higepon  <higepon@users.sourceforge.jp>

        * doc/text/srfi-98.txt: Wrote document for srfi-98.

        * lib/mosh/process.ss: Wrote document for process management.

        * doc/text/Download.txt.in : Wrote document for download and install.
